# limitwatch

./: .coverage  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  plan.md  pyproject.toml  repo-map.md
.github/workflows/: release.yml  test-and-lint.yml
legacy/python/: README.md  pyproject.toml
legacy/python/src/limitwatch/: auth.py  display.py  history.py
legacy/python/src/limitwatch/providers/: chutes.py  openai.py
legacy/python/tests/: test_auth.py  test_cli.py  test_config.py  test_github_copilot_provider.py  test_quota_client.py  test_shell_integration.py
limitwatch-rs/: Cargo.toml  README.md
limitwatch-rs/examples/: offline_shared_http.rs
limitwatch-rs/scripts/: benchmark-warm.sh
limitwatch-rs/src/: auth.rs  cli.rs  completions.rs  config.rs  display.rs  export.rs  history.rs  lib.rs  main.rs  model.rs  quota_client.rs  storage.rs
limitwatch-rs/src/providers/: base.rs  chutes.rs  github_copilot.rs  mod.rs  openai.rs  openrouter.rs
limitwatch-rs/tests/: cli_integration.rs  config_auth_compat.rs  github_verbose.rs  history_export.rs  provider_contracts.rs
limitwatch-rs/tests/fixtures/: accounts.json  config.json
limitwatch-rs/tests/fixtures/github_copilot/: myriota_billing_404_fallback.json  myriota_billing_requests.json  myriota_internal_user.json
limitwatch-rs/tests/fixtures/golden/: normal_quota_ansi.txt
limitwatch-rs/tests/fixtures/parity/: reference.json
src/: auth.py  cli.rs  completions.rs  config.py  config.rs  display.py  display.rs  export.rs  model.rs  quota_client.py  storage.rs
src/gemini_quota/: auth.py  cli.py  config.py  display.py  quota_client.py
src/gemini_quota/providers/: base.py  chutes.py  github_copilot.py  google.py  openai.py
src/limitwatch/: auth.py  cli.py  completions.py  config.py  display.py  export.py  history.py  quota_client.py  storage.py
src/limitwatch/providers/: base.py  chutes.py  github_copilot.py  google.py  openai.py  openrouter.py
src/providers/: openai.rs
tests/: cli_integration.rs  config_auth_compat.rs  history_export.rs  provider_contracts.rs  test_aliasing_grouping.py  test_auth.py  test_chutes_provider.py  test_cli.py  test_completions.py  test_config.py  test_display.py  test_github_copilot_provider.py  test_google_provider.py  test_history.py  test_openai_provider.py  test_openrouter_provider.py  test_quota_client.py  test_shell_integration.py  test_storage.py
tests/fixtures/contracts/: reference.json
tests/fixtures/github_copilot/: myriota_billing_404_fallback.json  myriota_billing_requests.json
tests/fixtures/golden/: normal_quota_plain.txt
