[package]
name = "limitwatch"
version = "0.7.0"
edition = "2021"
rust-version = "1.88"
description = "Monitor quota usage across GitHub Copilot, OpenAI Codex, and OpenRouter"
license = "MIT"
repository = "https://github.com/lucashutch/limitwatch"
readme = "README.md"
keywords = ["cli", "quota", "github-copilot", "openai", "openrouter"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
futures = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
vergen-git2 = "=1.0.7"
