[project]
name = "gemini-quota"
dynamic = ["version"]
description = "A powerful CLI tool to monitor Gemini and Chutes.ai quotas"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "google-cloud-quotas>=0.5.0",
    "requests>=2.32.5",
    "rich>=14.3.2",
]

[project.scripts]
gemini-quota = "gemini_quota.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_quota"]

[dependency-groups]
dev = [
    "pytest>=7.3.1",
    "pytest-sugar>=1.0.0",
]

[tool.uv]
package = true
