[project]
name = "limitwatch"
dynamic = ["version"]
description = "A powerful CLI tool to monitor API quota usage across multiple providers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "google-cloud-quotas>=0.5.0",
    "jsonschema>=4.23.0",
    "requests>=2.32.5",
    "rich>=14.3.2",
]

[project.scripts]
limitwatch = "limitwatch.cli:cli_entry_point"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/limitwatch"]

[dependency-groups]
dev = ["pytest>=7.3.1", "pytest-cov>=7.0.0", "pytest-sugar>=1.0.0"]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "--cov=src/limitwatch --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
