[package]
name = "limitwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
futures = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
